[package]
name = "bip32hdwallet"
version = "0.1.0"
edition = "2021"
authors = ["Juan M Salamanca <juan.m.salamanca@gmail.com>"]
description = "A BIP-32 Hierarchical Deterministic Wallet implementation in Rust"
license = "MIT"

[dependencies]
bs58 = "0.5.0"
secp256k1 = { version = "0.30.0", features = ["rand"] }
hmac = "0.12.1"
sha2 = "0.10.6"
rand = "0.8.5"
hex = "0.4.3"
thiserror = "2.0"
anyhow = "1.0.71"
pbkdf2 = "0.12.1"
unicode-normalization = "0.1.22"

[dev-dependencies]
hex-literal = "1.0"
proptest = "1.2.0"

[features]
default = []
